--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,8 @@ Maintainer: John Deck <jdeck88@gmail.com>
 Description: Services for fetching Field Information Management System Data
 License: What license is it under?
 LazyData: TRUE
-Depends: httr
+Imports:
+    httr,
+    ape,
+    adegenet
+RoxygenNote: 5.0.1
