--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Functions for Fetching 'GeOMe-db' Data
 Version: 1.0.0
 Date: 2019-05-11
-Author: Biocodellc
-Maintainer: GeOMe<geome.help@gmail.com>
+Author: RJ Ewing
+Maintainer: RJ Ewing<rj@rjewing.com>
 Description: The Genomic Observatory Metadatabase (GeOMe Database) is an open access repository for
     geographic and ecological metadata associated with sequenced samples. This package is used to retrieve
     GeOMe data for analysis. See <http://www.geome-db.org> for more information regarding GeOMe.
