--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Functions for Fetching 'GeOMe-db' Data
 Version: 2.0.0
 Date: 2019-08-08
-Authors@R: c(person("RJ", "Ewing", email = "ewing.rj@gmail.com",
+Authors@R: c(person("RJ", "Ewing", email = "rj@rjewing.com",
                   role = c("aut", "cre")), 
                   person("Eric", "Crandall", email = "eric.d.crandall@gmail.com",
                   role = c("aut")))
